// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChooseLanguageLetterTemplates error handling when duplicate languages are selected renders correctly 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <div
        class="nhsuk-hint"
      >
        You can only choose one template for each language
      </div>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <span
            class="nhsuk-error-message"
          >
            You can only choose one template for each language
          </span>
        </li>
      </ul>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Autumn Campaign Plan
          </span>
          <h1
            class="nhsuk-heading-xl"
          >
            Choose language letter templates
          </h1>
        </div>
        <form
          action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-language-letter-templates"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint nhsuk-u-reading-width"
                data-testid="table-hint"
              >
                Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
              </div>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="language-templates--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  You can only choose one template for each language
                </span>
                <div
                  aria-describedby="language-templates--error-message"
                  class="nhsuk-checkboxes"
                  id="language-templates"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="language-templates-table"
                    id="language-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="french-letter-id-checkbox"
                              id="template-french-letter-id"
                              name="template_french-letter-id"
                              type="checkbox"
                              value="french-letter-id:fr"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-french-letter-id"
                              id="template-french-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-french-letter-id"
                          >
                            French letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - French
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview French letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="french-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/french-letter-id"
                            id="preview-template-link-0"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="polish-letter-id-checkbox"
                              id="template-polish-letter-id"
                              name="template_polish-letter-id"
                              type="checkbox"
                              value="polish-letter-id:pl"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-polish-letter-id"
                              id="template-polish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-polish-letter-id"
                          >
                            Polish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Polish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Polish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="polish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/polish-letter-id"
                            id="preview-template-link-1"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="spanish-letter-id-checkbox"
                              id="template-spanish-letter-id"
                              name="template_spanish-letter-id"
                              type="checkbox"
                              value="spanish-letter-id:es"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-spanish-letter-id"
                              id="template-spanish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-spanish-letter-id"
                          >
                            Spanish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Spanish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Spanish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="spanish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/spanish-letter-id"
                            id="preview-template-link-2"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-4 nhsuk-u-padding-top-3"
              data-testid="back-link"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseLanguageLetterTemplates error handling when no template is selected renders correctly 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <div
        class="nhsuk-hint"
      >
        You have not chosen any templates
      </div>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <span
            class="nhsuk-error-message"
          >
            You have not chosen any templates
          </span>
        </li>
      </ul>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Autumn Campaign Plan
          </span>
          <h1
            class="nhsuk-heading-xl"
          >
            Choose language letter templates
          </h1>
        </div>
        <form
          action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-language-letter-templates"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint nhsuk-u-reading-width"
                data-testid="table-hint"
              >
                Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
              </div>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="language-templates--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  You have not chosen any templates
                </span>
                <div
                  aria-describedby="language-templates--error-message"
                  class="nhsuk-checkboxes"
                  id="language-templates"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="language-templates-table"
                    id="language-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="french-letter-id-checkbox"
                              id="template-french-letter-id"
                              name="template_french-letter-id"
                              type="checkbox"
                              value="french-letter-id:fr"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-french-letter-id"
                              id="template-french-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-french-letter-id"
                          >
                            French letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - French
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview French letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="french-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/french-letter-id"
                            id="preview-template-link-0"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="polish-letter-id-checkbox"
                              id="template-polish-letter-id"
                              name="template_polish-letter-id"
                              type="checkbox"
                              value="polish-letter-id:pl"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-polish-letter-id"
                              id="template-polish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-polish-letter-id"
                          >
                            Polish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Polish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Polish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="polish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/polish-letter-id"
                            id="preview-template-link-1"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="spanish-letter-id-checkbox"
                              id="template-spanish-letter-id"
                              name="template_spanish-letter-id"
                              type="checkbox"
                              value="spanish-letter-id:es"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-spanish-letter-id"
                              id="template-spanish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-spanish-letter-id"
                          >
                            Spanish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Spanish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Spanish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="spanish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/spanish-letter-id"
                            id="preview-template-link-2"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-4 nhsuk-u-padding-top-3"
              data-testid="back-link"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseLanguageLetterTemplates when templates are available renders multiple options 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Autumn Campaign Plan
          </span>
          <h1
            class="nhsuk-heading-xl"
          >
            Choose language letter templates
          </h1>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-language-letter-templates"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint nhsuk-u-reading-width"
                data-testid="table-hint"
              >
                Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-checkboxes"
                  id="language-templates"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="language-templates-table"
                    id="language-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="french-letter-id-checkbox"
                              id="template-french-letter-id"
                              name="template_french-letter-id"
                              type="checkbox"
                              value="french-letter-id:fr"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-french-letter-id"
                              id="template-french-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-french-letter-id"
                          >
                            French letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - French
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview French letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="french-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/french-letter-id"
                            id="preview-template-link-0"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="polish-letter-id-checkbox"
                              id="template-polish-letter-id"
                              name="template_polish-letter-id"
                              type="checkbox"
                              value="polish-letter-id:pl"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-polish-letter-id"
                              id="template-polish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-polish-letter-id"
                          >
                            Polish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Polish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Polish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="polish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/polish-letter-id"
                            id="preview-template-link-1"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="spanish-letter-id-checkbox"
                              id="template-spanish-letter-id"
                              name="template_spanish-letter-id"
                              type="checkbox"
                              value="spanish-letter-id:es"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-spanish-letter-id"
                              id="template-spanish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-spanish-letter-id"
                          >
                            Spanish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Spanish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Spanish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="spanish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/spanish-letter-id"
                            id="preview-template-link-2"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-4 nhsuk-u-padding-top-3"
              data-testid="back-link"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseLanguageLetterTemplates when there are language templates preselected renders correctly 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Autumn Campaign Plan
          </span>
          <h1
            class="nhsuk-heading-xl"
          >
            Choose language letter templates
          </h1>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-language-letter-templates"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <details
            class="nhsuk-details"
            data-testid="previous-selection-details"
          >
            <summary
              class="nhsuk-details__summary"
            >
              <span
                class="nhsuk-details__summary-text"
              >
                Previously selected templates
              </span>
            </summary>
            <div
              class="nhsuk-details__text"
            >
              <dl
                class="nhsuk-summary-list"
              >
                <div
                  class="nhsuk-summary-list__row"
                >
                  <dt
                    class="nhsuk-summary-list__key"
                  >
                    Previously selected templates
                  </dt>
                  <dd
                    class="nhsuk-summary-list__value"
                  >
                    <ul>
                      <li>
                        French letter template
                      </li>
                    </ul>
                  </dd>
                </div>
              </dl>
            </div>
          </details>
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint nhsuk-u-reading-width"
                data-testid="table-hint"
              >
                Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-checkboxes"
                  id="language-templates"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="language-templates-table"
                    id="language-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              checked=""
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="french-letter-id-checkbox"
                              id="template-french-letter-id"
                              name="template_french-letter-id"
                              type="checkbox"
                              value="french-letter-id:fr"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-french-letter-id"
                              id="template-french-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-french-letter-id"
                          >
                            French letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - French
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview French letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="french-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/french-letter-id"
                            id="preview-template-link-0"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="polish-letter-id-checkbox"
                              id="template-polish-letter-id"
                              name="template_polish-letter-id"
                              type="checkbox"
                              value="polish-letter-id:pl"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-polish-letter-id"
                              id="template-polish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-polish-letter-id"
                          >
                            Polish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Polish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Polish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="polish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/polish-letter-id"
                            id="preview-template-link-1"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="spanish-letter-id-checkbox"
                              id="template-spanish-letter-id"
                              name="template_spanish-letter-id"
                              type="checkbox"
                              value="spanish-letter-id:es"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-spanish-letter-id"
                              id="template-spanish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-spanish-letter-id"
                          >
                            Spanish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Spanish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Spanish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="spanish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/spanish-letter-id"
                            id="preview-template-link-2"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-4 nhsuk-u-padding-top-3"
              data-testid="back-link"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseLanguageLetterTemplates when there are no language templates preselected renders correctly 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Autumn Campaign Plan
          </span>
          <h1
            class="nhsuk-heading-xl"
          >
            Choose language letter templates
          </h1>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-language-letter-templates"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint nhsuk-u-reading-width"
                data-testid="table-hint"
              >
                Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-checkboxes"
                  id="language-templates"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="language-templates-table"
                    id="language-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="language-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="french-letter-id-checkbox"
                              id="template-french-letter-id"
                              name="template_french-letter-id"
                              type="checkbox"
                              value="french-letter-id:fr"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-french-letter-id"
                              id="template-french-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-french-letter-id"
                          >
                            French letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - French
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview French letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="french-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/french-letter-id"
                            id="preview-template-link-0"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="polish-letter-id-checkbox"
                              id="template-polish-letter-id"
                              name="template_polish-letter-id"
                              type="checkbox"
                              value="polish-letter-id:pl"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-polish-letter-id"
                              id="template-polish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-polish-letter-id"
                          >
                            Polish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Polish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Polish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="polish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/polish-letter-id"
                            id="preview-template-link-1"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-checkboxes__item"
                          >
                            <input
                              class="nhsuk-checkboxes__input"
                              data-checkbox-exclusive-group="language-templates"
                              data-testid="spanish-letter-id-checkbox"
                              id="template-spanish-letter-id"
                              name="template_spanish-letter-id"
                              type="checkbox"
                              value="spanish-letter-id:es"
                            />
                            <label
                              class="nhsuk-label nhsuk-checkboxes__label"
                              for="template-spanish-letter-id"
                              id="template-spanish-letter-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          <label
                            class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                            for="template-spanish-letter-id"
                          >
                            Spanish letter template
                          </label>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter - Spanish
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <a
                            aria-label="Preview Spanish letter template"
                            class="nhsuk-u-margin-bottom-2 nhsuk-link"
                            data-testid="spanish-letter-id-preview-link"
                            href="/message-plans/choose-other-language-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/spanish-letter-id"
                            id="preview-template-link-2"
                          >
                            Preview
                          </a>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-4 nhsuk-u-padding-top-3"
              data-testid="back-link"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseLanguageLetterTemplates when there are no templates renders correctly 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Autumn Campaign Plan
          </span>
          <h1
            class="nhsuk-heading-xl"
          >
            Choose language letter templates
          </h1>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-language-letter-templates"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <p
            class="nhsuk-body"
            data-testid="no-templates-message"
          >
            You do not have any foreign language letter templates yet.
          </p>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <a
              class="nhsuk-u-font-size-19 nhsuk-u-display-block nhsuk-body-m"
              data-testid="go-to-templates-link"
              href="/message-templates"
            >
              Go to templates
            </a>
            <a
              class="nhsuk-u-font-size-19"
              data-testid="back-link"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
